# Guinevere3

./: README.md  cabal.project  flake.nix  guinevere3.cabal  hie.yaml
.direnv/: flake-profile-1-link
