cabal-version:   2.4
name:            guinevere3
version:         0
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
description:     The Backend For The Guinevere Project
author:          Steven
maintainer:      Steven - steven.a.pinkerton@gmail.com
copyright:       2024-03-02 Steven
build-type:      Simple
extra-doc-files: 
  README.md
  CHANGELOG.md
license:         
license-file:    LICENSE
  
common common-options
  build-depends:      base >=4.9 && <5
  
  default-language:   Haskell2010
  
  default-extensions: 
        BangPatterns
        ConstraintKinds
        DataKinds
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveLift
        DeriveTraversable
        DerivingStrategies
        DuplicateRecordFields
        DerivingVia
        EmptyCase
        EmptyDataDecls
        EmptyDataDeriving
        ExistentialQuantification
        ExplicitForAll
        FlexibleContexts
        FlexibleInstances
        GADTSyntax
        GeneralisedNewtypeDeriving
        ImportQualifiedPost
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NoStarIsType
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PolyKinds
        PostfixOperators
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        StandaloneKindSignatures
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        UndecidableInstances
        ViewPatterns
  
  ghc-options:
      -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
      -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
      -fprint-explicit-foralls -fprint-explicit-kinds

executable guinevere3-exe
  import:         common-options
  hs-source-dirs: src
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  guinevere3

library
  import:          common-options
  hs-source-dirs:  lib
  exposed-modules: Lib
  build-depends:

test-suite guinevere3-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , guinevere3
    , hspec
    , HUnit
    , tasty
    , QuickCheck
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark guinevere3-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , guinevere3
    , criterion
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
